# SecuScan

./: .dockerignore  .flake8  .gitignore  README.md  manual_test_web.py  pyproject.toml
.github/workflows/: release.yml  test.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
examples/: vulnerable.py
secuscan/: cli.py
secuscan/core/: config.py  detection.py  docker_manager.py  engine.py  sonarqube_manager.py
secuscan/reporting/: reporter.py
secuscan/reporting/templates/: report_template.html
secuscan/scanners/: base.py
secuscan/scanners/android/: mobsf_adapter.py  scanner.py
secuscan/scanners/web/: sast.py
tests/: test_integration.py  test_sonarqube.py
